result modal solved

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <div id="show-time">0 seconds</div>
 
   <div class="box-container">
-    <div id="question"></div>
+    <div id="question" class="padding"></div>
 
-    <div id="display" class="inactive"></div>
+    <div id="display" class="inactive "></div>
 
     <div class="buttons">
       <button id="starts">START</button>
@@ -35,7 +35,7 @@
 
   <div id="countdown"></div>
   <div id="modal-background" class="hidden"></div>
-  <div id="result" class="hidden"></div>
+  <div id="result" class="hidden resultModal"></div>
 
   <script src="./history.js"></script>
   <script src="./script.js"></script>
