clear history added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <div class="line"></div>
     </div>
     <div id="histories"></div>
+    <div class="buttons">
+      <button id="clearHistory" class="red">Clear History</button>
+    </div>
   </div>
 
   <div id="countdown"></div>
