--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="title2">History</h1>
       <div class="line"></div>
     </div>
-    <div id="histories"></div>
+    <div id="histories" class="history"></div>
     <div class="buttons">
       <button id="clearHistory" class="red">Clear History</button>
     </div>
