--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 
 <body class="bg-secondary">
     <header>
-        <h1 class="text-center my-4 text-white">#Some Important question</h1>
+        <h1 class="text-center my-4 text-white">#Some Important questions for Programmers</h1>
     </header>
 
     <main class="container mt-5">
