--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 
 <body class="bg-secondary">
     <header>
-        <h1 class="text-center my-4 text-white">#Some Important questions for Programmers</h1>
+        <h1 class="text-center my-4 text-light fw-bold">#Some Important questions for Programmers</h1>
     </header>
 
     <main class="container mt-5">
@@ -29,7 +29,7 @@
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <strong>Local Storage : </strong>This read-only interface property provides access to the
-                        Document’s local storage object, the stored data is stored across browser sessions. Similar to
+                        Document's local storage object, the stored data is stored across browser sessions. Similar to
                         sessionStorage, except that localStorage data gets cleared when the page session ends that is
                         when the page is closed. It is cleared when the last “private” tab of a browser is closed
                         (localStorage data for a document loaded in a private browsing or incognito session
